--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://22d3aed8-3be2-40e9-8574-2d5b70981ad3.preview.emergentagent.com
 WDS_SOCKET_PORT=443
